Legger til validering av beløp for naturalytelse beløp